Style game layout area

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,21 +5,43 @@
 html {
     background-image:url('../images/background.jpg') ;
     background-repeat: no-repeat;
-    background-attachment: fixed;
     background-position: center;
     background-size: cover;
     margin: 0;
     
-}
+    }
 
 body {
    
     text-align: center;
-    font-family: Open Sans, sans-serif;
+    font-family: Ubuntu, sans-serif;
     font-weight: 300;
     color: #17191b;
-    
-    
+    background-attachment: fixed;
+    }
 
- 
-}
+/* --------- Heading */ 
+
+.heading {
+    font-family: Open Sans, sans-serif;
+    font-weight: 700;
+    }
+     
+
+/* --------- Game layout */ 
+.game-area {
+    background-color: #E6ECF0;
+    box-shadow: 0 0 10px 2px;
+    max-width: 45%;
+    max-height: 75%;
+    margin: auto;
+    padding: 15px;
+    }
+
+   .question-area h3{
+    margin: 5px;
+    } 
+
+    .question {
+        margin: 5px;
+    }
