Style end of game page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,3 +88,11 @@ body {
 .incorrect {
     color: red;
 }
+
+/* --------- End of Game page */ 
+
+#end-of-game h3 {
+    text-align: center;
+}
+
+
