--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 /* --------- Global style */
 
 html {
-    background-image: url('../images/background.jpg');
+    background-color: aliceblue;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -32,7 +32,7 @@ body {
 #game-area {
     background-color: #bbd5e2;
     box-shadow: 0 0 10px 2px;
-    max-width: 65%;
+    max-width: 80%;
     max-height: 90%;
     margin: auto;
     padding: 15px;
